[tool.poetry]
name = "performance"
version = "0.1.0"
description = ""
authors = ["m09 <142691+m09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
filprofiler = "^0.17.0"
pyinstrument = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
